--- a/Client/index.html
+++ b/Client/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-
+    <button onclick="testFunc()">click here</button>
     <script src="main.js"></script>
 </body>
 </html>
