--- a/Client/index.html
+++ b/Client/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <button onclick="testFunc()">click here</button>
+    <button onclick="pokemonFetch()">pokemon</button>
     <script src="main.js"></script>
 </body>
 </html>
