--- a/client/public/index.html
+++ b/client/public/index.html
@@ -37,5 +37,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <!-- <script src="https://kit.fontawesome.com/517d96b7d3.js" crossorigin="anonymous"></script> -->
   </body>
 </html>
